# fastapi-django-template

./: .gitignore  .pre-commit-config.yaml  README.md  alias.sh  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE.md
fastapi/: Dockerfile  fastapi.env.tmpl  gunicorn.conf.django.py  gunicorn.conf.fastapi.py  manage.py  pyproject.toml
fastapi/app/: apps.py
fastapi/app/admin/: __init__.py  user.py
fastapi/app/api/: __init__.py  auth.py  user.py
fastapi/app/dependencies/: auth.py
fastapi/app/migrations/: 0001_initial.py
fastapi/app/models/: base.py  user.py
fastapi/app/routers/: __init__.py  auth.py  health.py  user.py
fastapi/app/schemas/: user.py
fastapi/config/: asgi.py  exceptions.py  jwt.py  log.py  password.py  urls.py
fastapi/config/settings/: base.py  local.py
fastapi/scripts/: runlocalserver.sh  startserver.sh
